@@ -1,7 +1,12 @@
-2007-03-24  Luis Ortiz <lortiz@interactivesupercomputing.com>
+2007-03-26  John W. Eaton  <jwe@octave.org>
 
-	* MatrixType.cc (MatrixType::MatrixType(void)): Initialize
-	sp_bandden to zero for performance reasons as its not used.
+	* chNDArray.cc, chMatrix.cc: Also generate comparison and bool ops.
+	* chNDArray.h, chMatrix.h: Provide decls.
+
+2007-03-24  Luis Ortiz  <lortiz@interactivesupercomputing.com>
+
+	* MatrixType.cc (MatrixType::MatrixType (void)): Initialize
+	sp_bandden to zero for performance reasons as it's not used.
 
 2007-03-23  David Bateman  <dbateman@free.fr>
 
